Fix storing anonymous types (procedures)